Translate2 - Org/src/objects/AccountAcount__c.object
<CustomObject>
    <description>*** Account Header</description>
    <fields>
        <fullName>AccountedFlgCal__c</fullName>
        <formula>IF(ISNULL(IssueDate__c) , 
IMAGE(&quot;/img/icon/unresolved16.png&quot;, &quot;未会計&quot;), IMAGE(&quot;/img/func_icons/util/checkmark16.gif&quot;, &quot;会計済み&quot;) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>会計済</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AmoutSpecialPrice__c</fullName>
        <label>特別税</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BillingCal__c</fullName>
        <formula>relaccount__r.Account.Name</formula>
        <label>ご請求先</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactName__c</fullName>
        <description>会計書の宛名先自動表示、設定用</description>
        <formula>relaccount__r.LastName  &amp; &apos; &apos; &amp;  relaccount__r.FirstName</formula>
        <label>お客様名</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <label>割引金額</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DivisionName__c</fullName>
        <formula>if ( ISPICKVAL(Relreserve__r.Field367__c, &quot;婚礼&quot;) || ISPICKVAL(Relreserve__r.Field367__c, &quot;フォトプラン&quot;) || ISPICKVAL(Relreserve__r.Field367__c, &quot;結納・顔合わせ&quot;), &quot;A_ブライダル部門&quot;, if ( ISPICKVAL(Relreserve__r.Field367__c, &quot;法人予約_営業担当付&quot;) || ISPICKVAL(Relreserve__r.Field367__c, &quot;法人予約_営業担当無し&quot;), &quot;B_法人部門&quot;, &quot;C_個人部門&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>$部門</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field100__c</fullName>
        <label>レストラン売上合計2（内税込み）金額</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field101__c</fullName>
        <label>レストラン売上合計2（内税込み）点数</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field102__c</fullName>
        <label>レストラン売上外税対象金額</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IssueDate__c</fullName>
        <description>会計書発行日</description>
        <label>発行日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OutSideAccount__c</fullName>
        <formula>if ( Field39__c =&quot;00&quot; &amp;&amp;  Field40__c =&quot;&quot; &amp;&amp;  Field147__c &lt;&gt; 0, 1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>取引種別が00でVOIDなし売上金額が¥0でないのとき、集計対象の値１を返す</inlineHelpText>
        <label>$集計対象外</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>POSNo__c</fullName>
        <defaultValue>&apos;0001&apos;</defaultValue>
        <label>POSNo.</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PaymentFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <label>入金確認</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PlanNo__c</fullName>
        <inlineHelpText>Plan Number がゼロのときは、プランではないとする</inlineHelpText>
        <label>Plan#</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Relreserve__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ご予約</label>
        <referenceTo>Lead__c</referenceTo>
        <relationshipLabel>会計</relationshipLabel>
        <relationshipName>Account8Wls</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SearchDate__c</fullName>
        <label>SearchDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Seq__c</fullName>
        <formula>Field150__r.Seq__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>$Seq.</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SumSrvPriceExcTax__c</fullName>
        <label>サービス料（税抜）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SumSrvPriceIncTax__c</fullName>
        <label>サービス料（税込）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TableNo__c</fullName>
        <inlineHelpText>レストランでの実際のテーブル＃</inlineHelpText>
        <label>TableNo</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target__c</fullName>
        <formula>if (  OutSideAccount__c  = 1, IMAGE(&quot;/resource/&quot; &amp; $Setup.CommDefine__c.AppNS__c &amp; &quot;A&quot;, &quot;対象&quot;), &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>A</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TeaTimeFlag__c</fullName>
        <formula>if ( Field155__c &gt;= 2450, 0,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>客単価 &gt;= ¥3,150のとき、レストランにて食事&amp;ドリンク(TeaTimeFlag = 0)、以外はレストランにて喫茶となる</inlineHelpText>
        <label>TeaTimeFlag</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>comment__c</fullName>
        <label>コメント</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>frs__c</fullName>
        <label>予約会計</label>
        <referenceTo>RsvAccount__c</referenceTo>
        <relationshipLabel>会計</relationshipLabel>
        <relationshipName>AccountYLM3</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>relaccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>お客様</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>会計</relationshipLabel>
        <relationshipName>accountjvxI</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>会計</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Field145__c</columns>
        <columns>frs__c</columns>
        <columns>Field147__c</columns>
        <columns>Field151__c</columns>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <displayFormat>{YYYY}{MM}{DD}-{000}</displayFormat>
        <label>Account#</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>